--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header{
     box-shadow: 0 3px 3px rgb(0 0 0 / 5%); /* para la imagen*/
     height: 90px;
     justify-content: space-between;
-    padding: 0 32px 0 32px;
+    padding: 0 32px 0 32px; /*arriba costado abajo costado*/
 }
 
 nav{
